@@ -5,6 +5,8 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 - 06/05/2006, version 0.11 (0.0.7, 0.1.1, 0.1.2, 0.0.3): roms
 	- added a new label which display RAM/FLASH free &used
 	- show more levels in the current path
+	- reworked/factorized opening/closing of device
+	- auto-detect USB devices at startup
 
 - 15/04/2006, version 0.10 (0.0.7, 0.1.0, 0.1.2, 0.0.3): roms
 	- follows ticalcs2 changes in the API
